fix splash section spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,36 +1,38 @@
 body, h1, h2, h3, h4, h5, h6,
-p, blockquote, pre, hr,
-dl, dd, ol, ul, figure {
+p, ul {
 	margin: 0;
 	padding: 0;
+	font-family: 'Open Sans', arial, sans-serif;
 }
-/* Main Nav Styles */
+
+/* ============ Main Nav Styles ============ */
 header {
-	margin-top: 20px;
+	padding-top: 20px;
 	width: 100%;
 	height: 50px;
 	background-color: transparent;
 	margin-bottom: 20px;
 	position: fixed;
-	
 }
 
 h1 {
 	color: white;
+	margin-bottom: 0px;
+	padding-top: 80px;
 }
 
-p{
+p {
 	color: white;
 }
 
-.logo{
+.logo {
 	display: inline;
 	float: left;
 	font-weight: 700;
 	color: white;
 	padding-left: 200px;
 	text-align: right;
-	
+	padding-top:0px;
 }
 
 nav{
@@ -41,6 +43,7 @@ nav{
 nav ul {
 	list-style: none;
 	text-transform: uppercase;
+	font-size: 14px;
 }
 
 li {
@@ -67,13 +70,15 @@ a:hover{
   border-color: white;
 }
 
+/* ============ splash ============ */
+
 .splash{
 	text-align: center;
-	background-color: #ccb081;
+	background-color: #f7bd6e;
 	height: 800px;
 	width: auto;
 }
-/*
+
 .splash h1 {
-	margin-top: 100px;
-}*/
+	padding-top: 100px;
+}
